# Kairos

./: .gitignore  README.md  kairos_daemon.py  kairos_supervisor.py  pyproject.toml
kairos/: __init__.py  __main__.py  analytics.py  cli.py  config.py  daemon.py  launcher.py  models.py  nlp.py  storage.py  widget.py
tests/: test_cli.py  test_daemon.py  test_launcher.py  test_nlp.py  test_storage.py  test_supervisor.py  test_widget.py
